Mon Oct 19 16:01:18 MESZ 1998 hannes
* hannes: limitations on length of arguments removed (was 200 chars)
  (iplib.cc)

Thu Oct 15 15:54:05 MEST 1998 <krueger@mathematik.uni-kl.de>
        * extra.cc,grammar.y,ipid.cc,ipid.h,iplib.cc,ipshell.cc
        * ipshell.h,ring.cc,structs.h,tesths.cc,mod2.h.in
          Replaced ring *iiLocalRing[] by a stack (class namerec)
          To use old method define USE_IILOCALRING in mod2.h
          Old method incompatible with HAVE_NAMESPACES!

1998-10-14  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

        * sing_mp.cc (slOpenMPLaunch): added slKill as link function
        * added --MPrsh to slOpenLaunch

Wed Jul  1 15:25:23 MET DST 1998 hannes:
* fixed bug with quotient: M:module(0) returns (1), not ([1])

Fri Jun 19 10:01:59 MET DST 1998 hannes
* hannes: changed back: quot is now from standard.lib,
                        quotient the C-version
                        (iparith.cc LIB/standard.lib)

Thu Jun 18 19:27:27 MET DST 1998 hannes
        * error handling (grammar.y iparith.cc iplib.cc)
          (leaving of levels, local vars, messages,..)
          The reason:
               proc p { intvec w; w[0]; }
               proc p2 {int i;p();"huhu";}
               p2(); int i; listvar();

1998-06-13  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

        * feread.cc: explicit declaration of stuff we need from readline.h

1998-06-12  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

        * polys.cc: pComp for simple orderings based on only three
        routines (no variation for # of variables)

        * spolys0.cc (spGSpolyLoop): globally replaced by spSpolyLoop_General

Fri Jun 12 12:11:06 MET DST 1998 hannes
        * minor optimizations in polys.cc, kutil.* kstd1.cc:
          pass pointers, not structures to posIn[LT],
          do not check for NULL in pDeg (as pFDeg does not check)

Wed Jun  3 16:20:22 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

        * Makefile.in (DOCS): target removed